# tortuga

./: README.md
client/: README.md  package-lock.json  package.json
client/public/: index.html
client/src/: configs.js  index.js
client/src/app/: App.css  App.js  App2.js  AppComponent.js  AppConstants.js  AppContainer.js
client/src/dialog/: DialogComponent.js  FullScreenDialogComponent.js
client/src/select/: SelectComponent.js  SelectContainer.js
client/src/util/: ApiError.js  Request.js
server/: .gitignore  .pylintrc  Makefile  README.md  manage.py  pyproject.toml
server/tortuga/: settings.py  urls.py  wsgi.py
server/tortuga/apps/diagnoses/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
server/tortuga/apps/diagnoses/__tests__/: base.py  test_diagnoses_view.py  tests_diagnoses_view.py  tests_diagnosis_confirm_view.py
server/tortuga/apps/diagnoses/management/commands/: load.py
server/tortuga/apps/diagnoses/migrations/: 0001_initial.py
server/tortuga/apps/symptoms/: admin.py  apps.py  models.py  serializer.py  tests.py  urls.py  views.py
server/tortuga/apps/symptoms/__tests__/: base.py  test_symptom_confirm.py  tests_symptom_confirm.py  tests_symptom_detail.py  tests_symptoms_view.py
server/tortuga/apps/symptoms/migrations/: 0001_initial.py
server/tortuga/utils/: parser.py
